--- a/src/main/resources/co/edu/uniquindio/icaja/crearUsuario.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/crearUsuario.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="444.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectofinal3.CrearUsuario">
+<AnchorPane prefHeight="444.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.CrearUsuario">
    <children>
       <SplitPane dividerPositions="0.5474683544303798" layoutX="-1.0" orientation="VERTICAL" prefHeight="444.0" prefWidth="637.0">
         <items>
