--- a/src/main/resources/co/edu/uniquindio/icaja/crearUsuario.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/crearUsuario.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="444.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.CrearUsuario">
    <children>
       <SplitPane dividerPositions="0.5474683544303798" layoutX="-1.0" orientation="VERTICAL" prefHeight="444.0" prefWidth="637.0">
@@ -27,13 +26,13 @@
                   <TextField fx:id="txtCorreo" layoutX="116.0" layoutY="64.0" />
                   <TextField fx:id="txtClave" layoutX="116.0" layoutY="101.0" />
                   <TextField fx:id="txtSaldoTotal" layoutX="116.0" layoutY="144.0" />
-                  <TextField fx:id="txtCedula" layoutX="418.0" layoutY="24.0" />
-                  <TextField fx:id="txtTelefono" layoutX="418.0" layoutY="64.0" />
+                  <TextField fx:id="txtCedula" layoutX="453.0" layoutY="24.0" />
+                  <TextField fx:id="txtTelefono" layoutX="454.0" layoutY="64.0" />
                   <TextField fx:id="txtClaveTransaccional" layoutX="455.0" layoutY="101.0" prefHeight="26.0" prefWidth="150.0" />
                   <TextField fx:id="txtPresupuestoMens" layoutX="455.0" layoutY="144.0" prefHeight="26.0" prefWidth="150.0" />
-                  <Button fx:id="btnActualizar" layoutX="292.0" layoutY="192.0" mnemonicParsing="false" text="Actualizar" />
-                  <Button fx:id="btnAgregar" layoutX="115.0" layoutY="192.0" mnemonicParsing="false" text="Agregar" />
-                  <Button fx:id="btnEliminar" layoutX="475.0" layoutY="192.0" mnemonicParsing="false" text="Eliminar" />
+                  <Button fx:id="btnActualizarUsuario" layoutX="292.0" layoutY="192.0" mnemonicParsing="false" onAction="#actualizarUsuario" text="Actualizar" />
+                  <Button fx:id="btnAgregarUsuario" layoutX="115.0" layoutY="192.0" mnemonicParsing="false" onAction="#agregarUsuario" text="Agregar" />
+                  <Button fx:id="btnEliminarUsuario" layoutX="475.0" layoutY="192.0" mnemonicParsing="false" onAction="#eliminarUsuario" text="Eliminar" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="221.0" prefWidth="605.0">
