--- a/src/main/resources/co/edu/uniquindio/icaja/login.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/login.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="344.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.Login">
    <children>
       <Label layoutX="122.0" layoutY="26.0" text="Iniciar Sesión :)">
@@ -26,7 +25,7 @@
       </Label>
       <TextField fx:id="txtIdUsuario" layoutX="97.0" layoutY="115.0" />
       <TextField fx:id="txtContraseña" layoutX="96.0" layoutY="207.0" />
-      <Button fx:id="btnIniciarSesion" layoutX="128.0" layoutY="265.0" mnemonicParsing="false" text="Iniciar Sesión" />
-      <Button fx:id="btnCancelar" layoutX="140.0" layoutY="319.0" mnemonicParsing="false" text="Cancelar" />
+      <Button fx:id="btnIniciarSesion" layoutX="128.0" layoutY="265.0" mnemonicParsing="false" onAction="#iniciarSesion" text="Iniciar Sesión" />
+      <Button fx:id="btnCancelar" layoutX="140.0" layoutY="319.0" mnemonicParsing="false" onAction="#cancelarIniciarSesion" text="Cancelar" />
    </children>
 </AnchorPane>
