--- a/src/main/resources/co/edu/uniquindio/icaja/categoria.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/categoria.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.Categoria">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.CategoriaView">
    <children>
       <Label layoutX="306.0" layoutY="137.0" text="Aqui va categoria" />
    </children>
