--- a/src/main/resources/co/edu/uniquindio/icaja/login.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="344.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.Login">
+<AnchorPane prefHeight="400.0" prefWidth="344.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.LoginView">
    <children>
       <Label layoutX="122.0" layoutY="26.0" text="Iniciar Sesión :)">
          <font>
