--- a/src/main/resources/co/edu/uniquindio/icaja/usuarioPrincipal.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/usuarioPrincipal.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.UsuarioPrincipal">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.UsuarioPrincipalView">
    <children>
       <Label layoutX="286.0" layoutY="168.0" text="Usuario principal :)" />
    </children>
