--- a/src/main/resources/co/edu/uniquindio/icaja/cuentaBancaria.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/cuentaBancaria.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.CuentaBancaria">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.CuentaBancariaView">
    <children>
       <Label layoutX="229.0" layoutY="126.0" text="Aqui va cuenta bancaria" />
    </children>
