--- a/src/main/resources/co/edu/uniquindio/icaja/templates/gestionarUsuario.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/gestionarUsuario.fxml
@@ -21,29 +21,29 @@
                   <Label layoutX="332.0" layoutY="28.0" text="Cédula:" />
                   <Label layoutX="332.0" layoutY="105.0" text="Clave Transaccional:" />
                   <Label layoutX="32.0" layoutY="148.0" text="Presupuesto Mensual:" />
-                  <TextField fx:id="txtNombre" layoutX="115.0" layoutY="24.0" prefHeight="18.0" prefWidth="150.0" />
-                  <TextField fx:id="txtCorreo" layoutX="116.0" layoutY="64.0" />
-                  <TextField fx:id="txtClave" layoutX="116.0" layoutY="101.0" />
-                  <TextField fx:id="txtCedula" layoutX="453.0" layoutY="24.0" />
-                  <TextField fx:id="txtTelefono" layoutX="454.0" layoutY="64.0" />
-                  <TextField fx:id="txtClaveTransaccional" layoutX="455.0" layoutY="101.0" prefHeight="26.0" prefWidth="150.0" />
-                  <TextField fx:id="txtPresupuestoMens" layoutX="167.0" layoutY="143.0" prefHeight="26.0" prefWidth="150.0" />
-                  <Button fx:id="btnActualizarUsuario" layoutX="292.0" layoutY="192.0" mnemonicParsing="false" onAction="#actualizarUsuario" text="Actualizar" />
-                  <Button fx:id="btnAgregarUsuario" layoutX="115.0" layoutY="192.0" mnemonicParsing="false" onAction="#agregarUsuario" text="Agregar" />
-                  <Button fx:id="btnEliminarUsuario" layoutX="475.0" layoutY="192.0" mnemonicParsing="false" onAction="#eliminarUsuario" text="Eliminar" />
+                  <TextField fx:id="txtNombreadmin" layoutX="115.0" layoutY="24.0" prefHeight="18.0" prefWidth="150.0" />
+                  <TextField fx:id="txtCorreoAdmin" layoutX="116.0" layoutY="64.0" />
+                  <TextField fx:id="txtClaveAdmin" layoutX="116.0" layoutY="101.0" />
+                  <TextField fx:id="txtCedulaAdmin" layoutX="453.0" layoutY="24.0" />
+                  <TextField fx:id="txtTelefonoAdmin" layoutX="454.0" layoutY="64.0" />
+                  <TextField fx:id="txtClaveTransaccionalAdmin" layoutX="455.0" layoutY="101.0" prefHeight="26.0" prefWidth="150.0" />
+                  <TextField fx:id="txtPresupuestoMensualAdmin" layoutX="167.0" layoutY="143.0" prefHeight="26.0" prefWidth="150.0" />
+                  <Button fx:id="btnActualizarUsuarioAdmin" layoutX="292.0" layoutY="192.0" mnemonicParsing="false" onAction="#actualizarUsuario" text="Actualizar" />
+                  <Button fx:id="btnAgregarUsuarioAdmin" layoutX="115.0" layoutY="192.0" mnemonicParsing="false" onAction="#agregarUsuario" text="Agregar" />
+                  <Button fx:id="btnEliminarUsuarioAdmin" layoutX="475.0" layoutY="192.0" mnemonicParsing="false" onAction="#eliminarUsuario" text="Eliminar" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="221.0" prefWidth="605.0">
                <children>
-                  <TableView fx:id="tbUsuarios" layoutX="1.0" prefHeight="200.0" prefWidth="636.0">
+                  <TableView fx:id="tbUsuariosAdmin" layoutX="1.0" prefHeight="200.0" prefWidth="636.0">
                     <columns>
-                      <TableColumn fx:id="tbcNombreUsuario" prefWidth="75.0" text="Nombre" />
-                      <TableColumn fx:id="tbcCedulaUsuario" prefWidth="65.60003662109375" text="Cédula " />
-                        <TableColumn fx:id="tbcCorreoUsuario" prefWidth="73.60003662109375" text="Correo" />
-                        <TableColumn fx:id="tbcTelefonoUsuario" prefWidth="76.00003051757812" text="Telefono" />
-                        <TableColumn fx:id="tbcClaveUsuario" prefWidth="72.0" text="Clave" />
-                        <TableColumn fx:id="tbcClaveTransaccional" prefWidth="136.0" text="Clave Transaccional" />
-                        <TableColumn fx:id="tbcPresupuestoMensual" prefWidth="136.79998779296875" text="Presupuesto Mensual" />
+                      <TableColumn fx:id="tbcNombreUsuarioAdmin" prefWidth="75.0" text="Nombre" />
+                      <TableColumn fx:id="tbcCedulaUsuarioAdmin" prefWidth="65.60003662109375" text="Cédula " />
+                        <TableColumn fx:id="tbcCorreoUsuarioAdmin" prefWidth="73.60003662109375" text="Correo" />
+                        <TableColumn fx:id="tbcTelefonoUsuarioAdmin" prefWidth="76.00003051757812" text="Telefono" />
+                        <TableColumn fx:id="tbcClaveUsuarioAdmin" prefWidth="72.0" text="Clave" />
+                        <TableColumn fx:id="tbcClaveTransaccionalAdmin" prefWidth="136.0" text="Clave Transaccional" />
+                        <TableColumn fx:id="tbcPresupuestoMensualAdmin" prefWidth="136.79998779296875" text="Presupuesto Mensual" />
                     </columns>
                   </TableView>
                </children>
