--- a/src/main/resources/co/edu/uniquindio/icaja/templates/gestionarUsuario.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/gestionarUsuario.fxml
@@ -40,7 +40,7 @@
                               <Font name="Georgia Italic" size="18.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtNombreadmin" prefHeight="31.0" prefWidth="262.0" GridPane.columnIndex="1" />
+                        <TextField fx:id="txtNombreAdmin" prefHeight="31.0" prefWidth="262.0" GridPane.columnIndex="1" />
                         <Label text="Cédula:" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                            <font>
                               <Font name="Georgia Italic" size="18.0" />
