--- a/src/main/resources/co/edu/uniquindio/icaja/templates/crearUsuario.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/crearUsuario.fxml
@@ -2,4 +2,4 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="444.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.GestionarUsuarioView" />
+<AnchorPane prefHeight="444.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.CrearUsuarioView" />
