--- a/src/main/resources/co/edu/uniquindio/icaja/templates/usuarioPrincipal.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/usuarioPrincipal.fxml
@@ -1,11 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.UsuarioPrincipalView">
+<AnchorPane prefHeight="733.0" prefWidth="805.0" style="-fx-background-color: #5E2BFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.UsuarioPrincipalView">
    <children>
-      <Label layoutX="286.0" layoutY="168.0" text="Usuario principal :)" />
+      <AnchorPane layoutX="140.0" layoutY="-1.0" prefHeight="734.0" prefWidth="543.0" style="-fx-background-color: F3FAE1;">
+         <children>
+            <GridPane layoutX="140.0" layoutY="94.0" prefHeight="625.0" prefWidth="264.0">
+               <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="30.999975585937477" minHeight="10.0" prefHeight="30.999975585937477" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="37.400006103515636" minHeight="0.0" prefHeight="34.20002441406251" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="122.40001220703124" minHeight="10.0" prefHeight="87.79998779296875" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="59.19998779296873" minHeight="3.1999877929687273" prefHeight="29.40001220703124" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="76.19998779296878" minHeight="10.0" prefHeight="68.19998779296878" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label text="Saldo Disponible " GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Georgia Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lbPonerSaldoUsuario" text="#####" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Georgia Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label text="¿Qué haremos hoy ?" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="Georgia Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Button mnemonicParsing="false" onAction="#DepositoAction" prefHeight="32.0" prefWidth="138.0" text="Deposito" GridPane.rowIndex="7">
+                     <font>
+                        <Font name="Georgia Italic" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#RetirarAction" prefHeight="34.0" prefWidth="104.0" text="Retirar" GridPane.rowIndex="10">
+                     <font>
+                        <Font name="Georgia Italic" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#TransferirDineroAction" prefHeight="33.0" prefWidth="142.0" text="Transferir Dinero" GridPane.rowIndex="9">
+                     <font>
+                        <Font name="Georgia Italic" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#PresupuestoAction" prefHeight="37.0" prefWidth="114.0" text="Presupuestos" GridPane.rowIndex="11">
+                     <font>
+                        <Font name="Georgia Italic" size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
+            <Button layoutX="404.0" layoutY="655.0" mnemonicParsing="false" onAction="#HistorialAction" prefHeight="32.0" prefWidth="104.0" text="Historial">
+               <font>
+                  <Font name="Georgia Italic" size="15.0" />
+               </font>
+            </Button>
+            <Button layoutX="35.0" layoutY="655.0" mnemonicParsing="false" onAction="#CerrarAction" prefHeight="32.0" prefWidth="104.0" text="Cerrar">
+               <font>
+                  <Font name="Georgia Italic" size="15.0" />
+               </font>
+            </Button>
+            <Label layoutX="35.0" layoutY="27.0" text="Bienvenido :) ">
+               <font>
+                  <Font name="Georgia Italic" size="19.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbPonerNombreUsuario" layoutX="35.0" layoutY="55.0" text="poner nombre !">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Separator layoutY="228.0" prefHeight="0.0" prefWidth="543.0" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
