--- a/src/main/resources/co/edu/uniquindio/icaja/templates/usuarioPrincipal.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/usuarioPrincipal.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -55,21 +56,33 @@
                      <font>
                         <Font name="Georgia Italic" size="15.0" />
                      </font>
+                     <effect>
+                        <DropShadow height="11.64" radius="4.75" width="9.36" />
+                     </effect>
                   </Button>
                   <Button mnemonicParsing="false" onAction="#RetirarAction" prefHeight="34.0" prefWidth="104.0" text="Retirar" GridPane.rowIndex="10">
                      <font>
                         <Font name="Georgia Italic" size="15.0" />
                      </font>
+                     <effect>
+                        <DropShadow height="9.33" radius="4.165" width="9.33" />
+                     </effect>
                   </Button>
                   <Button mnemonicParsing="false" onAction="#TransferirDineroAction" prefHeight="33.0" prefWidth="142.0" text="Transferir Dinero" GridPane.rowIndex="9">
                      <font>
                         <Font name="Georgia Italic" size="15.0" />
                      </font>
+                     <effect>
+                        <DropShadow height="9.36" radius="4.165" width="9.3" />
+                     </effect>
                   </Button>
                   <Button mnemonicParsing="false" onAction="#PresupuestoAction" prefHeight="37.0" prefWidth="114.0" text="Presupuestos" GridPane.rowIndex="11">
                      <font>
                         <Font name="Georgia Italic" size="15.0" />
                      </font>
+                     <effect>
+                        <DropShadow height="9.33" radius="4.165" width="9.33" />
+                     </effect>
                   </Button>
                </children>
             </GridPane>
@@ -77,11 +90,17 @@
                <font>
                   <Font name="Georgia Italic" size="15.0" />
                </font>
+               <effect>
+                  <DropShadow height="9.33" radius="4.165" width="9.33" />
+               </effect>
             </Button>
             <Button layoutX="35.0" layoutY="655.0" mnemonicParsing="false" onAction="#CerrarAction" prefHeight="32.0" prefWidth="104.0" text="Cerrar">
                <font>
                   <Font name="Georgia Italic" size="15.0" />
                </font>
+               <effect>
+                  <DropShadow height="9.33" radius="4.165" width="9.33" />
+               </effect>
             </Button>
             <Label layoutX="35.0" layoutY="27.0" text="Bienvenido :) ">
                <font>
@@ -93,7 +112,10 @@
                   <Font name="Georgia Italic" size="18.0" />
                </font>
             </Label>
-            <Separator layoutY="228.0" prefHeight="0.0" prefWidth="543.0" />
+            <Separator layoutY="228.0" prefHeight="0.0" prefWidth="543.0">
+               <effect>
+                  <DropShadow height="23.34" radius="10.6" width="21.06" />
+               </effect></Separator>
          </children>
       </AnchorPane>
    </children>
