--- a/src/main/resources/co/edu/uniquindio/icaja/templates/mainNormal.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/mainNormal.fxml
@@ -10,10 +10,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="733.0" prefWidth="805.0" style="-fx-background-color: F7F6C5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.mainNormalView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="733.0" prefWidth="805.0" style="-fx-background-color: #5E2BFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.mainNormalView">
    <children>
 
-            <HBox layoutX="133.0" layoutY="689.0" minWidth="93.0" prefHeight="42.0" prefWidth="543.0" style="-fx-background-color: green;">
+            <HBox layoutX="140.0" layoutY="689.0" minWidth="93.0" prefHeight="42.0" prefWidth="543.0" style="-fx-background-color: green;">
          <children>
             <GridPane prefHeight="42.0" prefWidth="743.0">
                <columnConstraints>
@@ -65,7 +65,7 @@
             </GridPane>
          </children>
       </HBox>
-      <AnchorPane fx:id="anchorUsuarioPrincipal" prefHeight="690.0" prefWidth="806.0" style="-fx-background-color: F3FAE1;" visible="false">
+      <AnchorPane fx:id="anchorUsuarioPrincipal" prefHeight="690.0" prefWidth="806.0" style="-fx-background-color: F3FAE1;">
          <children>
             <Label text="usuarioPrincipal" />
             <fx:include source="usuarioPrincipal.fxml" />
