--- a/src/main/resources/co/edu/uniquindio/icaja/templates/usuarioPrincipal.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/usuarioPrincipal.fxml
@@ -2,126 +2,100 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="690.0" prefWidth="805.0" style="-fx-background-color: #5E2BFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.UsuarioPrincipalView">
+<AnchorPane prefHeight="626.0" prefWidth="1044.0" style="-fx-background-color: #5E2BFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.UsuarioPrincipalView">
    <children>
-      <AnchorPane layoutX="140.0" layoutY="-1.0" prefHeight="690.0" prefWidth="543.0" style="-fx-background-color: F3FAE1;">
+      <AnchorPane prefHeight="626.0" prefWidth="1050.0" style="-fx-background-color: F3FAE1;">
          <children>
-            <GridPane layoutX="140.0" layoutY="111.0" prefHeight="586.0" prefWidth="264.0">
-               <columnConstraints>
-                  <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="87.80002441406253" minHeight="10.0" prefHeight="83.00000610351566" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="91.20000000000002" minHeight="10.0" prefHeight="36.599993896484364" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="92.80002441406248" minHeight="0.0" prefHeight="32.79998779296875" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="122.40001220703124" minHeight="10.0" prefHeight="31.199981689453125" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="59.19998779296873" minHeight="3.1999877929687273" prefHeight="29.40001220703124" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="76.19998779296878" minHeight="10.0" prefHeight="28.600048828124955" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="76.59995117187498" minHeight="10.0" prefHeight="34.40003662109376" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="75.79996337890623" minHeight="10.0" prefHeight="34.4000244140625" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="73.99997558593748" minHeight="10.0" prefHeight="73.99997558593748" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label text="Saldo Disponible ">
-                     <font>
-                        <Font name="Georgia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lbPonerSaldoUsuario" text="#####" GridPane.rowIndex="1">
-                     <font>
-                        <Font name="Georgia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label text="¿Qué haremos hoy ?" GridPane.rowIndex="8">
-                     <font>
-                        <Font name="Georgia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Button mnemonicParsing="false" onAction="#DepositoAction" prefHeight="32.0" prefWidth="138.0" text="Deposito" GridPane.rowIndex="9">
-                     <font>
-                        <Font name="Georgia Italic" size="15.0" />
-                     </font>
-                     <effect>
-                        <DropShadow height="11.64" radius="4.75" width="9.36" />
-                     </effect>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#RetirarAction" prefHeight="34.0" prefWidth="104.0" text="Retirar" GridPane.rowIndex="13">
-                     <font>
-                        <Font name="Georgia Italic" size="15.0" />
-                     </font>
-                     <effect>
-                        <DropShadow height="9.33" radius="4.165" width="9.33" />
-                     </effect>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#TransferirDineroAction" prefHeight="33.0" prefWidth="142.0" text="Transferir Dinero" GridPane.rowIndex="11">
-                     <font>
-                        <Font name="Georgia Italic" size="15.0" />
-                     </font>
-                     <effect>
-                        <DropShadow height="9.36" radius="4.165" width="9.3" />
-                     </effect>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#PresupuestoAction" prefHeight="37.0" prefWidth="114.0" text="Presupuestos" GridPane.rowIndex="15">
-                     <font>
-                        <Font name="Georgia Italic" size="15.0" />
-                     </font>
-                     <effect>
-                        <DropShadow height="9.33" radius="4.165" width="9.33" />
-                     </effect>
-                  </Button>
-                  <Label text="Ingresos" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="Georgia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lbPonerIngresosUsuario" text="#####" GridPane.rowIndex="4">
-                     <font>
-                        <Font name="Georgia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label text="Gastos" GridPane.rowIndex="6">
-                     <font>
-                        <Font name="Georgia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lbPonerGastosUsuario" text="#####" GridPane.rowIndex="7">
-                     <font>
-                        <Font name="Georgia Italic" size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </GridPane>
-            <Label layoutX="35.0" layoutY="27.0" text="Bienvenido :) ">
+            <Label layoutX="445.0" layoutY="20.0" text="Bienvenido :) ">
                <font>
                   <Font name="Georgia Italic" size="19.0" />
                </font>
             </Label>
-            <Label fx:id="lbPonerNombreUsuario" layoutX="35.0" layoutY="55.0" text="poner nombre !">
+            <Label fx:id="lbPonerNombreUsuario" layoutX="443.0" layoutY="61.0" text="poner nombre !">
                <font>
                   <Font name="Georgia Italic" size="18.0" />
                </font>
             </Label>
-            <Separator layoutY="348.0" prefHeight="0.0" prefWidth="543.0">
+            <Circle fill="#bf4efcfe" layoutX="503.0" layoutY="188.0" radius="86.0" stroke="BLACK" strokeType="INSIDE" />
+            <Label layoutX="433.0" layoutY="157.0" text="Saldo Disponible ">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbPonerSaldoUsuario" layoutX="469.0" layoutY="204.0" text="#####">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Circle fill="#bf4efca0" layoutX="671.0" layoutY="328.0" radius="74.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fill="#bf4efcab" layoutX="327.0" layoutY="329.0" radius="74.0" stroke="BLACK" strokeType="INSIDE" />
+            <Label layoutX="635.0" layoutY="297.0" text="Ingresos">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbPonerIngresosUsuario" layoutX="643.0" layoutY="324.0" text="#####">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="299.0" layoutY="297.0" text="Gastos">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbPonerGastosUsuario" layoutX="295.0" layoutY="331.0" text="#####">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="421.0" layoutY="384.0" text="¿Qué haremos hoy ?">
+               <font>
+                  <Font name="Georgia Italic" size="18.0" />
+               </font>
+            </Label>
+            <Button layoutX="424.0" layoutY="459.0" mnemonicParsing="false" onAction="#DepositoAction" prefHeight="32.0" prefWidth="138.0" text="Deposito">
+               <font>
+                  <Font name="Georgia Italic" size="15.0" />
+               </font>
                <effect>
-                  <DropShadow height="23.34" radius="10.6" width="21.06" />
-               </effect></Separator>
+                  <DropShadow height="11.64" radius="4.75" width="9.36" />
+               </effect>
+            </Button>
+            <Button layoutX="603.0" layoutY="415.0" mnemonicParsing="false" onAction="#TransferirDineroAction" prefHeight="33.0" prefWidth="142.0" text="Transferir Dinero">
+               <font>
+                  <Font name="Georgia Italic" size="15.0" />
+               </font>
+               <effect>
+                  <DropShadow height="9.36" radius="4.165" width="9.3" />
+               </effect>
+            </Button>
+            <Button layoutX="274.0" layoutY="414.0" mnemonicParsing="false" onAction="#RetirarAction" prefHeight="34.0" prefWidth="111.0" text="Retirar">
+               <font>
+                  <Font name="Georgia Italic" size="15.0" />
+               </font>
+               <effect>
+                  <DropShadow height="9.33" radius="4.165" width="9.33" />
+               </effect>
+            </Button>
+            <Button layoutX="436.0" layoutY="533.0" mnemonicParsing="false" onAction="#PresupuestoAction" prefHeight="37.0" prefWidth="114.0" text="Presupuestos">
+               <font>
+                  <Font name="Georgia Italic" size="15.0" />
+               </font>
+               <effect>
+                  <DropShadow height="9.33" radius="4.165" width="9.33" />
+               </effect>
+            </Button>
          </children>
+         <effect>
+            <ColorAdjust />
+         </effect>
       </AnchorPane>
    </children>
 </AnchorPane>
