--- a/src/main/resources/co/edu/uniquindio/icaja/templates/mainNormal.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/mainNormal.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #5E2BFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.mainNormalView">
    <children>
-      <AnchorPane fx:id="anchorUsuarioPrincipal" layoutX="181.0" layoutY="49.0" prefHeight="626.0" prefWidth="1054.0" style="-fx-background-color: F3FAE1;">
+      <AnchorPane fx:id="anchorUsuarioPrincipal" layoutX="181.0" layoutY="49.0" prefHeight="626.0" prefWidth="1054.0" style="-fx-background-color: F3FAE1; -fx-background-radius: 30;">
          <children>
             <Label text="usuarioPrincipal" />
             <fx:include source="usuarioPrincipal.fxml" />
@@ -36,7 +36,7 @@
             <Label layoutX="409.0" layoutY="431.0" text="perfil" />
          </children>
       </AnchorPane>
-      <VBox alignment="CENTER" layoutX="31.0" layoutY="51.0" prefHeight="626.0" prefWidth="100.0" style="-fx-background-color: F7F6C5;">
+      <VBox alignment="CENTER" layoutX="31.0" layoutY="51.0" prefHeight="626.0" prefWidth="100.0" style="-fx-background-color: F7F6C5; -fx-background-radius: 20;">
          <children>
             <GridPane alignment="CENTER" prefHeight="417.0" prefWidth="100.0">
               <columnConstraints>
@@ -49,7 +49,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" onAction="#ponerUsuarioPrincipalAction" prefHeight="79.0" prefWidth="100.0" text=" ">
+                  <Button mnemonicParsing="false" onAction="#ponerUsuarioPrincipalAction" prefHeight="79.0" prefWidth="100.0" style="-fx-background-radius: 15;" text=" ">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -61,7 +61,7 @@
                      </font>
                   </FontAwesomeIconView>
       
-                        <Button mnemonicParsing="false" onAction="#PonerCuentasUsuarioAction" prefHeight="76.0" prefWidth="100.0" text="Cuentas" GridPane.rowIndex="1">
+                        <Button mnemonicParsing="false" onAction="#PonerCuentasUsuarioAction" prefHeight="76.0" prefWidth="100.0" style="-fx-background-radius: 15;" text="Cuentas" GridPane.rowIndex="1">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -69,7 +69,7 @@
       
                         <FontAwesomeIconView glyphName="CREDIT-CARD" size="40" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       
-                        <Button mnemonicParsing="false" onAction="#ponerDetallesUsuarioAction" prefHeight="79.0" prefWidth="100.0" text="detalles" GridPane.rowIndex="2">
+                        <Button mnemonicParsing="false" onAction="#ponerDetallesUsuarioAction" prefHeight="79.0" prefWidth="100.0" style="-fx-background-radius: 15;" text="detalles" GridPane.rowIndex="2">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -77,7 +77,7 @@
       
                         <FontAwesomeIconView glyphName="CHART" size="40" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
       
-                        <Button mnemonicParsing="false" onAction="#ponerPerfilUsuarioAction" prefHeight="75.0" prefWidth="100.0" text="perfil" GridPane.rowIndex="3">
+                        <Button mnemonicParsing="false" onAction="#ponerPerfilUsuarioAction" prefHeight="75.0" prefWidth="100.0" style="-fx-background-radius: 15;" text="perfil" GridPane.rowIndex="3">
                      <font>
                         <Font size="18.0" />
                      </font>
