--- a/src/main/resources/co/edu/uniquindio/icaja/templates/admin/transaccion.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/admin/transaccion.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.TransaccionView">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.admin.TransaccionView">
    <children>
       <Label layoutX="286.0" layoutY="159.0" text="aqui va transaccion" />
    </children>
