--- a/src/main/resources/co/edu/uniquindio/icaja/templates/mainAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/mainAdmin.fxml
@@ -84,7 +84,7 @@
                                           </font>
                                       </Label>
                                       <TextField fx:id="txtPresupuestoMensualAdmin" prefHeight="31.0" prefWidth="262.0" style="-fx-background-radius: 10;" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
-                                      <Button fx:id="btnAgregarUsuarioAdmin" alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#agregarUsuario" prefHeight="40.0" prefWidth="117.0" style="-fx-background-radius: 10;" text="Agregar" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                                      <Button fx:id="btnAgregarUsuarioAdmin" alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#crearUsuario" prefHeight="40.0" prefWidth="117.0" style="-fx-background-radius: 10;" text="Agregar" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="TOP">
                                           <font>
                                               <Font name="Georgia Bold Italic" size="18.0" />
                                           </font>
