Se maqueto el registro de usuario y se cambiaron los nombres de mainNormal y mainAdmin a baseNormal y baseAdmin

--- a/src/main/resources/co/edu/uniquindio/icaja/templates/baseAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/baseAdmin.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.mainAdminView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.baseAdminView">
     <children>
       <AnchorPane fx:id="panelUsuario" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0">
          <children>
