--- a/src/main/resources/co/edu/uniquindio/icaja/templates/baseNormal.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/baseNormal.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.ColorAdjust?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #5E2BFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.mainNormalView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #5E2BFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.baseNormalView">
    <children>
       <AnchorPane fx:id="anchorUsuarioPrincipal" layoutX="181.0" layoutY="49.0" prefHeight="626.0" prefWidth="1054.0" style="-fx-background-color: F3FAE1; -fx-background-radius: 30;">
           <AnchorPane prefHeight="626.0" prefWidth="1044.0" style="-fx-background-color: #5E2BFF; -fx-background-radius: 30;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
