--- a/src/main/resources/co/edu/uniquindio/icaja/templates/admin/categoria.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/admin/categoria.fxml
@@ -1,11 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.admin.CategoriaView">
+<AnchorPane fx:id="categorialpanel" prefHeight="615.0" prefWidth="1058.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.admin.CategoriaView">
    <children>
-      <Label layoutX="306.0" layoutY="137.0" text="Aqui va categoria" />
+      <SplitPane dividerPositions="0.5" layoutX="2.0" layoutY="-1.0" orientation="VERTICAL" prefHeight="615.0" prefWidth="1058.0">
+         <items>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <GridPane layoutX="33.0" layoutY="15.0" prefHeight="230.0" prefWidth="631.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.40000915527344" minWidth="10.0" prefWidth="279.40000915527344" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.8666015625" minWidth="10.0" prefWidth="268.799951171875" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="105.1333251953125" minHeight="10.0" prefHeight="105.1333251953125" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="43.99997558593749" minHeight="10.0" prefHeight="19.4666748046875" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label text="Nombre:" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label text="Tipo Categoría" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label text="Descripción:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <MFXTextField fx:id="txtNombreCategoriaAdmin" floatMode="ABOVE" prefHeight="35.0" prefWidth="210.0" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                        <MFXTextField fx:id="txtTipoCategoriaAdmin" floatMode="ABOVE" prefHeight="35.0" prefWidth="207.0" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                        <TextArea fx:id="txaDescripcionCategoriaAdmin" prefHeight="106.0" prefWidth="235.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                     </children>
+                  </GridPane>
+                  <MFXButton layoutX="501.0" layoutY="250.0" onAction="#crearCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Crear">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </MFXButton>
+                  <MFXButton layoutX="708.0" layoutY="250.0" onAction="#consultarCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Consultar">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </MFXButton>
+                  <MFXButton layoutX="897.0" layoutY="250.0" onAction="#EliminarCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Eliminar">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </MFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <TableView fx:id="tvCategoriaAdmin" layoutX="-2.0" layoutY="2.0" prefHeight="306.0" prefWidth="1059.0">
+                     <columns>
+                        <TableColumn fx:id="tcNombreCategoriaAdmin" prefWidth="209.06673884391785" text="Nombre" />
+                        <TableColumn fx:id="tcTipoCategoriaAdmin" prefWidth="254.93324279785156" text="Tipo" />
+                        <TableColumn fx:id="tcDescripcionCategoriaAdmin" prefWidth="596.2667541503906" text="Descripción" />
+                     </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </items>
+      </SplitPane>
    </children>
 </AnchorPane>
