--- a/src/main/resources/co/edu/uniquindio/icaja/templates/admin/cuenta.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/admin/cuenta.fxml
@@ -1,11 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXComboBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.admin.CuentaView">
+<AnchorPane fx:id="panelCuenta" prefHeight="615.0" prefWidth="1058.0" style="-fx-background-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.admin.CuentaView">
    <children>
-      <Label layoutX="229.0" layoutY="126.0" text="Aqui va cuenta bancaria" />
+      <SplitPane dividerPositions="0.5" layoutX="-1.0" orientation="VERTICAL" prefHeight="615.0" prefWidth="1058.0">
+         <items>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-radius: 10;">
+               <children>
+                  <GridPane layoutX="16.0" layoutY="-1.0" prefHeight="307.0" prefWidth="1025.0" style="-fx-background-radius: 10;">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.73330688476562" minWidth="10.0" prefWidth="194.2666015625" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="185.7333984375" minWidth="10.0" prefWidth="185.7333984375" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="210.8665771484375" minWidth="10.0" prefWidth="210.8665771484375" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.46661376953125" minWidth="10.0" prefWidth="198.93342285156245" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="222.06658935546875" minWidth="10.0" prefWidth="197.53338623046875" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label text="Entidad:" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label text="Número de cuenta:" GridPane.columnIndex="2" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label text="Saldo:" GridPane.columnIndex="4" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label text="Límite:" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label text="Tipo de Cuenta:" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cbTipoCuentaAdmin" onAction="#seleccionTipoCuentaAction" prefHeight="31.0" prefWidth="153.0" style="-fx-background-radius: 10;" GridPane.columnIndex="2" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                        <TextField fx:id="txtEntidadAdmin" alignment="CENTER" prefWidth="166.0" style="-fx-background-radius: 10;" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtLimiteAdmin" style="-fx-background-radius: 10;" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtNumeroCuentaAdmin" style="-fx-background-radius: 10;" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="txtSaldoAdmin" style="-fx-background-radius: 10;" GridPane.columnIndex="4" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </TextField>
+                        <Button mnemonicParsing="false" onAction="#crearCuentaAction" prefHeight="40.0" prefWidth="114.0" style="-fx-background-radius: 10;" text="Crear " GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#ActualizarCuentaAction" prefHeight="40.0" prefWidth="116.0" style="-fx-background-radius: 10;" text="Actualizar" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#eliminarCuentaAction" prefHeight="40.0" prefWidth="116.0" style="-fx-background-radius: 10;" text="Eliminar" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <MFXComboBox fx:id="cbPropietarioAdmin" floatMode="BORDER" onAction="#seleccionPropietarioAction" prefHeight="13.0" prefWidth="165.0" GridPane.columnIndex="4" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                        <Label prefHeight="18.0" prefWidth="114.0" text="Propietario:" GridPane.columnIndex="4" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-radius: 10;">
+               <children>
+                  <TableView fx:id="tvTablaCuentasAdmin" layoutX="1.0" layoutY="-4.0" prefHeight="302.0" prefWidth="1055.0" style="-fx-background-radius: 10;">
+                     <columns>
+                        <TableColumn fx:id="tcEntidadAdmin" prefWidth="176.53329157829285" style="-fx-background-radius: 10;" text="Entidad" />
+                        <TableColumn fx:id="tcNumeroCuentaAdmin" prefWidth="189.86671447753906" style="-fx-background-radius: 10;" text="N. Cuenta" />
+                        <TableColumn fx:id="tcSaldoAdmin" prefWidth="224.0" style="-fx-background-radius: 10;" text="Saldo" />
+                        <TableColumn fx:id="tcLimiteAdmin" prefWidth="215.20001220703125" style="-fx-background-radius: 10;" text="Límite" />
+                        <TableColumn fx:id="tcTipoCuentaAdmin" prefWidth="250.66656494140625" style="-fx-background-radius: 10;" text="Tipo Cuenta" />
+                     </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </items>
+      </SplitPane>
    </children>
 </AnchorPane>
