--- a/src/main/resources/co/edu/uniquindio/icaja/templates/admin/categoria.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/admin/categoria.fxml
@@ -51,17 +51,22 @@
                         <TextArea fx:id="txaDescripcionCategoriaAdmin" prefHeight="106.0" prefWidth="235.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                      </children>
                   </GridPane>
-                  <MFXButton layoutX="501.0" layoutY="250.0" onAction="#crearCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Crear">
+                  <MFXButton buttonType="RAISED" layoutX="518.0" layoutY="250.0" onAction="#crearCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Crear">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </MFXButton>
-                  <MFXButton layoutX="708.0" layoutY="250.0" onAction="#consultarCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Consultar">
+                  <MFXButton buttonType="RAISED" layoutX="708.0" layoutY="250.0" onAction="#consultarCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Consultar">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </MFXButton>
-                  <MFXButton layoutX="897.0" layoutY="250.0" onAction="#EliminarCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Eliminar">
+                  <MFXButton buttonType="RAISED" layoutX="897.0" layoutY="250.0" onAction="#EliminarCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Eliminar">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </MFXButton>
+                  <MFXButton buttonType="RAISED" layoutX="330.0" layoutY="250.0" onAction="#limpiarCamposCategoriaAction" prefHeight="34.0" prefWidth="100.0" text="Limpiar">
                      <font>
                         <Font size="16.0" />
                      </font>
