--- a/src/main/resources/co/edu/uniquindio/icaja/templates/admin/cuenta.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/admin/cuenta.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXComboBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -102,6 +103,11 @@
                            </font>
                         </Label>
                         <MFXComboBox fx:id="cbTipoCuentaAdmin" floatMode="ABOVE" onAction="#seleccionTipoCuentaAction" prefHeight="15.0" prefWidth="184.0" GridPane.columnIndex="2" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                        <MFXButton depthLevel="LEVEL1" onAction="#LimpiarCamposCuentaAction" prefHeight="40.0" prefWidth="114.0" text="Limpiar" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </MFXButton>
                      </children>
                   </GridPane>
                </children>
